--- a/README.rdoc
+++ b/README.rdoc
@@ -25,7 +25,7 @@ Inspired by RPX, Loginsane is a host-it-yourself solution. When new services are
 
 = Dependencies
 
-facebooker gem (1.0.54) and oauth gem (0.3.1)
+facebooker gem (1.0.54) and oauth gem (0.3.6)
 
   sudo gem install facebooker oauth
   
@@ -40,7 +40,8 @@ facebooker gem (1.0.54) and oauth gem (0.3.1)
 
 3. Point your browser to to http://localhost:3000/
 
-You would probably like to password protect your loginsane server at some point in time.
+NOTE 1: For Facebook connect & Twitter to actually work, you'd need a publicly hostname instead of localhost:3000 (see http://rfacebook.rubyforge.org/tunnel.html )
+NOTE 2: You would probably want to protect access to your loginsane server (services and sites controllers) at some point in time.
 
 == License
 
